# jira-opensync-wrapper

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
jira_opensync_wrapper/: __init__.py  jira_opensync_wrapper.py
tests/: test_jira_opensync_wrapper.py
